      thanks to \I{Michael Chirico}'s \PR{18811}.

      \item \code{seq.Date()} no longer explicitly coerces results from
      integer to double, analogously with \code{seq.default()},
      \code{seq.int()} and \code{seq.POSIXt()}, resolving a \emph{modified}
      \PR{18782}.

      \item \code{axisTicks(usr, ...)} documentation clarification for
      \code{log=TRUE}, fixing bug \PR{18821} thanks to Duncan Murdoch.

      \item \code{debug()} and \code{debugonce(fun)} now also accept a
      string \code{fun} when it names an S4 generic, fixing \PR{18822}
      thanks to Michael Jagan.
    }
  }
}

\section{\Rlogo CHANGES IN R 4.4.2 patched}{
 \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item The functions \code{R_strtod} and \code{R_atof} now allow
      hexadecimal constants without an exponent, for compatibility with
      their C99 versions (\PR{18805}).
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item \code{kappa(A, exact=TRUE)} for singular \code{A} returns
      \code{Inf} more generally, fixing \PR{18817} reported by
      \I{Mikael Jagan}.

      \item Fixed URLs of the sun spots (\code{sunspot.month} etc) data
      sets and mention future changes due to recalibration.

      \item The parser now accepts hexadecimal constants with a decimal
      point without an exponent (taken as \code{p0}) as documented in
      \code{?NumericConstants} (\PR{18819}).
    }
  }
}

\section{\Rlogo CHANGES IN R 4.4.2}{
  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item The S-compatibility macros \code{F77_COM} and
      \code{F77_COMDECL} defined in header \file{R_ext/RS.h} are
      deprecated and will be removed shortly.  We could find no record
      of their use.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item \I{Mathlib} function \code{lgammacor(x)} no longer warns about
      underflow to zero for large \code{x}.

      \item Text widths and heights were incorrectly reported by the